fixed footer and background image not covering all of the page

--- a/client/src/components/Style.css
+++ b/client/src/components/Style.css
@@ -1,3 +1,24 @@
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+html { 
+  background: url(./images/bg3.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+body {
+  position: relative;
+  margin: 0;
+  padding-bottom: 3rem;
+  background: url("./images/bg3.jpg") no-repeat center center fixed; 
+  background-size: cover;
+  font-family: sans-serif;
+}
 /* Header-container styling */
 .header-Jumbotron {
   margin: 10px;
@@ -77,12 +98,13 @@
 
 .main-display-row {
   /* this is only being used to check the container size */
-  /* border: 1px solid white; */
+  border: 2px solid red;
   display: flex;
   align-items: stretch;
   max-width: 100vw;
   max-height: 100vh;
   padding: 10px;
+  margin-bottom: 100px
 }
 
 .componentHolder {
